--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "swiggy-clone",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://akshaysharma14.github.io/Swiggy_clone",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
@@ -18,10 +17,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
-
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
